[package]
name = "typeables"
version = "1.2.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2018"
description = "Typeables: Rust crate of type aliases. By SixArm.com."
readme = "README.md"
repository = "https://github.com/sixarm/typeables-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0-only"
keywords = ["collections", "btree", "hash", "map", "set"]
categories = ["algorithms", "data-structures", "rust-patterns"]

[dependencies]
