[package]
name = "typeables"
version = "2.0.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2021"
description = "Typeables: Rust crate of type aliases. By SixArm.com."
readme = "README.md"
repository = "https://github.com/sixarm/typeables-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0-only"
keywords = ["type", "alias", "struct", "tuple"]
categories = ["data-structures", "rust-patterns", "development-tools"]

[dependencies]
